2012-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* lib/pi_gpio.c: Add GPL header, change C++ comments to C,
	include config.h first.
	* lib/pi_gpio.h: Add GPL header, change C++ comments to C, remove
	pwhwm.h header.
	(isr_handler): Change return type to void *, remove unused var
	"len", cast return types to void *, test results of calls to read ()
	(gpio_clear_int): return 0 always.
	(gpio_read): Use type compliant initialization of valStr;
	* lib/pi_i2c.c: Add GPL header, include config.h first, include
	sys/ioctl.h.
	* lib/pi_i2c.h: Add GPL header, change C++ comments to C, remove
	pwhwm.h header.
	* lib/pi_pwm.c: Add GPL header, change C++ comments to C,
	include config.h first.
	<clk_map, gpio_map, pwm_map>: Changed declaration to unsigned int.
	* lib/pi_pwm.h: Add GPL header, change C++ comments to C, remove
	pwhwm.h header.
	* lib/pihwm.h: Add GPL header, change C++ comments to C. Change to
	use sleep rather than usleep, and remove header.

2012-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* lib/pi_gpio.h, lib/pi_i2c.c, lib/pi_i2c.h, lib/pi_pwm.c,
	* lib/pi_pwm.h, lib/pihwm.h: Reformat using indent to GNU coding
	standards.

2012-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* aclocal.m4, AUTHORS, compile, config.guess, config.h.in,
	* config.sub: Created.
	* configure: Regenerated.
	* configure.ac, COPYING, ChangeLog: Created.
	* demo: Directory created for demo programs.
	* demo/Makefile.am: Created.
	* demo/Makefile.in: Regenerated.
	* depcomp: Created.
	* doc: Directory created for documentation.
	* doc/Makefile.am: Created.
	* doc/Makefile.in: Regenerated.
	* INSTALL, install-sh: Created.
	* lib: Directory created for the library.
	* lib/Makefile.am: Created.
	* lib/Makefile.in: Regenerated.
	* ltmain.sh: Created:
	* m4: Directory created for local macros
	* m4/libtool.m4, m4/ltoptions.m4, m4/ltsugar.m4, m4/ltversion.m4:
	* m4/lt~obsolete.m4, missing, Makefile.am: Created.
	* Makefile.in: Regenerated.
	* NEWS: Created.